--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -7679,6 +7679,28 @@ textarea.model-search-box input {
 .page-messages .message-text img {
   max-width: 100%;
 }
+.page-events-calendar .day-names div {
+  width: 14.28571429%;
+  float: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.page-events-calendar .day {
+  float: left;
+  width: 14.28571429%;
+  height: 100px;
+  overflow-y: auto;
+}
+.page-events-calendar .day .day-number {
+  display: block;
+}
+.page-events-calendar .day a {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .widget-navigation-default .list-unstyled li.item-level-0 {
   padding-left: 20px;
 }
