Bootstrap Datetime picker button style fix

--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -127,7 +127,7 @@ ul.pagination {
 .hover-ui { display: none; }
 
 /* Datetime Picker */
-.date-time-picker .input-group-addon { cursor: pointer }
+.date-time-picker .input-group-addon { cursor: pointer; border: 1px solid rgb(240, 240, 240); }
 .bootstrap-datetimepicker-widget td.active, .bootstrap-datetimepicker-widget td.active:hover { background-color: @blue !important }
 
 /* Tags */
