--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6924,6 +6924,7 @@ ul.pagination li.active span {
 /* Datetime Picker */
 .date-time-picker .input-group-addon {
   cursor: pointer;
+  border: 1px solid #f0f0f0;
 }
 .bootstrap-datetimepicker-widget td.active,
 .bootstrap-datetimepicker-widget td.active:hover {
