--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -75,6 +75,10 @@ a:hover { color: @primaryColor; }
     }
 }
 
+/* Datetime Picker */
+.date-time-picker .input-group-addon { cursor: pointer; }
+.bootstrap-datetimepicker-widget td.active, .bootstrap-datetimepicker-widget td.active:hover { background-color: @primaryColor !important }
+
 /* Slider Default Styling - Feel free to overwrite */
 .slider { 
     position: relative; width: 100%; height: 245px; /* Height of a single slide */
