--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -39,7 +39,7 @@
 
 .focus { box-shadow: 0px 0px 0px 2px #eee; border-color: silver }
 
-h1.page-title { }
+h1.page-title.model-index { display: none }
 h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
 
 /* Form */
