--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -45,6 +45,8 @@ a:hover { color: @primaryColor; }
     textarea { height: auto }
 }
 
+/* File Upload */
+.input-group-addon.delete { cursor: pointer }
 .image-upload-prev { 
     margin-bottom: 10px; 
     img { max-width: 100%; }
