--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -72,7 +72,10 @@ h2.section { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: bold }
         text-align: left;
     }
 }
+.input-group .input-group-addon { border: 1px solid rgb(240, 240, 240); }
 
+/* File Upload */
+.input-group-addon.delete { cursor: pointer }
 .image-upload-prev { 
     margin-bottom: 10px; 
     img { max-width: 100%; max-height: 32px; transition: all 0.1s linear; }
@@ -127,7 +130,7 @@ ul.pagination {
 .hover-ui { display: none; }
 
 /* Datetime Picker */
-.date-time-picker .input-group-addon { cursor: pointer; border: 1px solid rgb(240, 240, 240); }
+.date-time-picker .input-group-addon { cursor: pointer; }
 .bootstrap-datetimepicker-widget td.active, .bootstrap-datetimepicker-widget td.active:hover { background-color: @blue !important }
 
 /* Tags */
