--- a/resources/assets/less/backend.less
+++ b/resources/assets/less/backend.less
@@ -157,7 +157,7 @@ ul.pagination {
 
 .page-images {
     .image {
-        position: relative; float: left; width: 33.333%; padding-top: 33%; background-size: cover; background-position: center;
+        position: relative; float: left; width: 20%; padding-top: 20%; background-size: cover; background-position: center;
         box-shadow: inset 0px 0px 0px 1px white;
         .show { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
         .info { 
@@ -178,9 +178,15 @@ ul.pagination {
 }
 @media (max-width: @screen-tablet) {
     .page-images {
+        .image { width: 33.33%; padding-top: 33%; }
         .info, .actions { display: block !important }
         .info .gallery { display: none }
         .actions a { padding: 1px 5px !important; }
+    }
+}
+@media (max-width: 850px) {
+    .page-images {
+        .image { width: 25%; padding-top: 25%; }
     }
 }
 
