--- a/resources/assets/less/frontend.less
+++ b/resources/assets/less/frontend.less
@@ -118,10 +118,6 @@ a:hover { color: @primaryColor; }
     li { width: 100% }
 }
 
-/*
- * Modules
- */
-
 .create-comment { 
     margin-top: 20px;
     .textarea-wrapper { margin: 20px 0px; padding: 0px 20px }
@@ -129,6 +125,15 @@ a:hover { color: @primaryColor; }
     textarea { width: 100%; height: 70px; margin-left: -20px; padding: 10px 20px; border: 2px solid silver; color: #666; }
     textarea:focus { border-color: #ff6100; }
 }
+
+.comments-login-info {
+    margin-top: 10px;
+}
+
+
+/*
+ * Modules
+ */
 
 .widget-partners {
     a { text-align: center; }
